# Mcp-Docker

./: .actrc  .coveragerc  .dockerignore  .docs-check.yaml  .env.ci  .env.template  .gitattributes  .gitignore  .golangci.yml  .hadolint.yaml  .mcp-github-actions.json  .mcp.json.example  .mega-linter.yml  .pre-commit-config.yaml  .pre-commit-config.yaml.sample  .shellcheckrc  .trivyignore  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  DOCKER_PERMISSION_FIX_PLAN.md  Dockerfile  Dockerfile.actions  Dockerfile.github-mcp-server  FINAL_PATH_RESOLUTION_SOLUTION.md  FINAL_VALIDATION_SUMMARY.md  LICENSE  Makefile  Makefile.old  PR_DESCRIPTION.md  PR_MCP_GITHUB_ACTIONS.md  PSScriptAnalyzerSettings.psd1  QUALITY_GATE_COMPARISON_REPORT.md  README.md  SECURITY.md  cli.py  codecov.yml  complete_distribution_validation_results.json  docker-compose.custom.yml  docker-compose.override.yml.example  (+19 more)
.amazonq/agents/: default.json
.amazonq/rules/: act-ci-compatibility-improvement-plan.md  docker-implementation-rules.md  docker-project-plan.md  docker-quality-rules.md  integration-test-improvement-plan.md  release-workflow.md  self-hosted-runner-migration-plan.md
.clinerules/: docker-quality-rules.md  dockerfile-consolidation-plan.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: README.md  basic-test.yml  basic-test.yml.sample  ci.yml  codeql.yml  dependabot-auto-merge.yml  docs-check.yml.sample  docs.yml  lint-test.yml  local-ci.yml.sample  quality-gates.yml  release.yml  security-monitoring.yml  security.yml  template-validation.yml  template-validation.yml.sample  test-ci.yml  test-simple.yml  tmp-test-env.yml  workflow-lint.yml
.kiro/settings/: mcp.json
.kiro/steering/: ai-development-rules.md  docker-implementation-rules.md  docker-quality-rules.md  project-guidelines.md
archive/: README.md  build.sh  mcp.sh  mcp_config.json  mcp_datetime_server.py  start.sh
archive/docs/: docker-project-plan.md  integration-test-improvement-plan.md  release-workflow.md
archive/reports/: ACTIONS_COMPARISON_REPORT.md  ACT_WRAPPER_MIGRATION_SUMMARY.md  FINAL_DOCKER_PERMISSION_COMPARISON.md  FINAL_VALIDATION_SUMMARY.md  INTEGRATION_SUMMARY.md  PATH_RESOLUTION_FINAL_FIX.md  PATH_RESOLUTION_FIX_SUMMARY.md  PATH_RESOLUTION_SUCCESS_SUMMARY.md  QUALITY_GATE_COMPARISON_REPORT.md  QUALITY_GATE_FINAL_COMPARISON_REPORT.md  TASK_20_IMPLEMENTATION_SUMMARY.md  UPDATED_COMPARISON_SUMMARY.md  complete_distribution_validation_results.json  (+5 more)
config/: mcp-external.yml
docs/: API.md  CLI_REFERENCE.md  COMMAND_USAGE_GUIDE.md  COMMUNITY_SUPPORT_GUIDE.md  DEVELOPMENT_WORKFLOW_INTEGRATION.md  DIAGNOSTIC_COMMANDS.md  DOCUMENTATION_CONSISTENCY.md  HANGUP_TROUBLESHOOTING.md  MCP_MANUAL_TEST_SUMMARY_2026-02-07.md  PLATFORM_SUPPORT.md  PROBLEM_REPORTING_GUIDE.md  QUICK_START_ACTIONS.md  RELEASE_SYSTEM.md  SCRIPT_OPTIONS_REFERENCE.md  SECURITY_PATCHES.md  SUPPORT.md  Security_tool_selection.md  TASK_12_IMPLEMENTATION_SUMMARY.md  TASK_15_IMPLEMENTATION_SUMMARY.md  TASK_16_IMPLEMENTATION_SUMMARY.md  TEST_CLEANUP_SUMMARY.md  TEST_CONSOLIDATION_REPORT.md  TROUBLESHOOTING.md  UV_TOOL_INSTALL.md  UV_TOOL_PATH_RESOLUTION.md  VALUE_PROPOSITION.md  actions-simulator-migration-archive-phase0-2.md  actions-simulator-migration-plan.md  actions-simulator-migration-retrospective.md  architecture-review-platform.md  copilot-review-mcp-tasks.md  copilot-review-watch-tools.md  e2e-runbook-mcp-docker-cli.md  github-app-setup.md  index.rst  installation.rst  overview.rst  phase4-final-report.md  phase4-pr-description.md  phase4.5-completion-checklist.md  (+7 more)
examples/: README.md  auto_recovery_demo.py  docker_integration_test.py  enhanced_act_wrapper_example.py  simulation_service_integration_demo.py  timeout_escalation_demo.py
monitoring/: prometheus.yml
scripts/: __init__.py  actions-debug.sh  analyze-duplicate-tests.sh  analyze-test-failures.sh  audit-dependencies.py  automated-docs-update.sh  automated-quality-check.sh  check-docs-consistency.py  check-env.sh  ci-validate-templates.sh  collect-support-info.sh  diagnostic-helper.sh  docker-health-check.sh  final-distribution-validation.sh  fix-permissions.sh  generate-ide-config.sh  generate-sbom.py  get-current-version.sh  health-check.sh  install-linux.sh  install-macos.sh  install-windows.ps1  install.sh  lint-shell.sh  manage-changelog.sh  normalize-log.sh  pre-commit-shellcheck.sh  pre-commit-yamllint.sh  require-pwsh.sh  rotate-secret.sh  run-actions.sh  run-comprehensive-tests.sh  run-hangup-regression-tests.sh  run_bats.py  run_security_scan.py  security-metrics.sh  security-validation.sh  setup-branch-protection.sh  setup-docker-env.sh  setup-docker-integration.sh  (+16 more)
src/: __init__.py  diagnostic_service.py  execution_tracer.py  mcp-http-bridge.js  performance_monitor.py  process_monitor.py
tests/: TEST_SUMMARY.md  complete_distribution_validation_results.json  conftest.py  integration_test.sh  integration_test_summary.py  pytest_hangup.ini  run_comprehensive_integration_tests.py  run_comprehensive_test_suite.py  run_hangup_tests.py  test_act_wrapper_with_tracer.py  test_actions_api.py  test_actions_service.py  test_actions_simulator.bats  test_auto_recovery.py  test_complete_distribution_validation.py  test_comprehensive_distribution.py  test_comprehensive_integration.py  test_comprehensive_integration_suite.py  test_diagnostic_service.py  test_docker_build.bats  test_docker_integration_checker.py  test_docker_integration_complete.py  test_docs_consistency.py  test_documentation_consistency.py  test_end_to_end_user_experience.py  test_end_to_end_validation.py  test_enhanced_act_wrapper.py  test_enhanced_act_wrapper_with_recovery.py  test_execution_tracer.py  test_expression.py  test_final_integration_validation.py  test_hangup_detector.py  test_hangup_end_to_end.py  test_hangup_integration.py  test_hangup_scenarios.bats  test_hangup_scenarios_comprehensive.py  test_hangup_unit.py  test_hello_world.bats (new)  test_helper.bash  test_improved_process_monitor.py  (+15 more)
(+271 files in other folders)
