[project]
name = "mcp-docker"
version = "1.1.0"
description = "Model Context Protocol (MCP) servers in production-ready Docker environment"
authors = [{name = "MCP Docker Team"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "click>=8.1.0",
    "rich>=13.0.0",
    "docker>=6.1.0",
    "fastapi>=0.117.1",
    "uvicorn[standard]>=0.37.0",
    "httpx>=0.28.1",
]
keywords = ["mcp", "docker", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "yamllint>=1.37.1",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    # Batsは外部ツールなので、インストール用のMakefileターゲットで管理
]

[project.urls]
Homepage = "https://github.com/scottlz0310/mcp-docker"
Repository = "https://github.com/scottlz0310/mcp-docker"
Issues = "https://github.com/scottlz0310/mcp-docker/issues"
Changelog = "https://github.com/scottlz0310/mcp-docker/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pkgs.safetycli.com/repository/public/pypi/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
exclude = [
    "archive/",
]
